--- a/data/blog/circuits.mdx
+++ b/data/blog/circuits.mdx
@@ -23,6 +23,7 @@ authors: ['arthur']
   src="https://www.youtube.com/embed/87SxO-NP0XU?si=xh8IggZRaCKFqdMM"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
@@ -50,6 +51,7 @@ The voltage divider consistently reduces the amplitude by half while preserving 
   src="https://www.youtube.com/embed/zHpEoPHfMhY?si=wvaNM0okkv8-_zxY"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
@@ -92,6 +94,7 @@ The circuit demonstrates fundamental principles of electrical engineering includ
   src="https://www.youtube.com/embed/OF3AUQ2tOfk?si=xK3z3z37goKcJjiX"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
