--- a/data/blog/new-enemy-best-friend.mdx
+++ b/data/blog/new-enemy-best-friend.mdx
@@ -5,7 +5,7 @@ tags: ['reading', 'dogs', 'cats', 'projects']
 draft: false
 layout: PostBanner
 images: ['/static/images/new-enemy-best-friend.jpg']
-summary: New Enemy Best Friend is about a dog and a cat and adventures they had.(Ages 8-10)
+summary: New Enemy Best Friend is about a dog and a cat and adventures they have (Ages 8 - 10)
 ---
 
 # Facts about the author
