--- a/data/blog/pythagorean-puzzle.mdx
+++ b/data/blog/pythagorean-puzzle.mdx
@@ -5,7 +5,7 @@ tags: ['math', 'puzzles']
 layout: PostBanner
 images: ['/static/images/pythagorean-puzzle1.jpg']
 draft: false
-summary: Pythagorean Theorem Puzzle
+summary: A 3D-printed puzzle that demonstrates the Pythagorean Theorem.  Buy yours today!
 ---
 
 # Demo Video
@@ -16,6 +16,7 @@ summary: Pythagorean Theorem Puzzle
   src="https://www.youtube.com/embed/IAJJml6Dr-s?si=1rdupgyP6ws1JyOa"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
