--- a/data/blog/science-math-lectures.mdx
+++ b/data/blog/science-math-lectures.mdx
@@ -11,15 +11,30 @@ authors: ['arthur']
 
 # Lectures on Science and Math from the [Arthur and Mei Mei School YouTube Channel](https://www.youtube.com/channel/UCsG2_wYtteZ3iEx0POkHSWQ)
 
+- [Introduction to Complex Variables](https://www.youtube.com/watch?v=Zzgy773qts0)
 - [Trigonometric Functions](https://www.youtube.com/watch?v=f87v9DIEnRE)
 - [The Exponential Function](https://www.youtube.com/watch?v=f87v9DIEnRE)
-  - [additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b](https://www.youtube.com/watch?v=m8tSDSJ6y2w)
+  - [additional proof of the basic exponentiation identity, $$e^{(a+b)} = e^a \cdot e^b$$](https://www.youtube.com/watch?v=m8tSDSJ6y2w)
 - [de Moirve's Thereom](https://www.youtube.com/watch?v=alm7uI5vzcc)
 - [Lagrangian Mechanics](https://www.youtube.com/watch?v=cpKcIsJZKlM)
 - [The Gaussian Integral](https://www.youtube.com/watch?v=xIOs2ysIqn8)
 - [Nebulae and Interacting Galaxies](https://www.youtube.com/watch?v=1u6OkgRPVgc)
 - [Power Functions and Their Derivatives](https://www.youtube.com/watch?v=uaqxW7gOFa0)
 - [Einstein's Special Theory of Relativity](https://www.youtube.com/watch?v=fNrItQM3WBA)
+
+# Introduction to Complex Variables
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/Zzgy773qts0?si=RTiIb88rG9rx5kBz"
+  title="YouTube video player"
+  frameBorder="0"
+  style={{ marginBottom: '2rem' }}
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 # Trigonometric Functions
 
@@ -29,6 +44,7 @@ authors: ['arthur']
   src="https://www.youtube.com/embed/f87v9DIEnRE?si=av-33eKZ-AwBRLOt"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
@@ -42,12 +58,13 @@ authors: ['arthur']
   src="https://www.youtube.com/embed/17zoszGPd6k?si=l4Hhsxq-PM6jvkjQ"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
 ></iframe>
 
-Additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b
+Additional proof of the basic exponentiation identity, $$e^{(a+b)} = e^a \cdot e^b$$
 
 <iframe
   width="560"
@@ -55,10 +72,12 @@ Additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b
   src="https://www.youtube.com/embed/m8tSDSJ6y2w?si=mArcIaoiSvI00NFc"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
 ></iframe>
+
 # de Moirve's Thereom
 
 <iframe
@@ -67,6 +86,7 @@ Additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b
   src="https://www.youtube.com/embed/alm7uI5vzcc?si=zaLK5HJQPXNuuFbA"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
@@ -80,6 +100,7 @@ Additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b
   src="https://www.youtube.com/embed/cpKcIsJZKlM?si=2pbCwSMZAMIEelbN"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
@@ -93,6 +114,7 @@ Additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b
   src="https://www.youtube.com/embed/xIOs2ysIqn8?si=CDksna-SqFRbPAmO"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
@@ -106,6 +128,7 @@ Additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b
   src="https://www.youtube.com/embed/1u6OkgRPVgc?si=7ngCM0r63EKAJAe0"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
@@ -121,6 +144,7 @@ A young Arthur (six years old) reviews various [Messier](https://en.wikipedia.or
   src="https://www.youtube.com/embed/uaqxW7gOFa0?si=1v_p8QCbb-RXz195"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
@@ -176,6 +200,7 @@ The presentation elegantly connects Pascal's Triangle to calculus by showing how
   src="https://www.youtube.com/embed/fNrItQM3WBA?si=an2tjBUGqC1iG3R4"
   title="YouTube video player"
   frameBorder="0"
+  style={{ marginBottom: '2rem' }}
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerPolicy="strict-origin-when-cross-origin"
   allowFullScreen
