Adding draft for proximity sensor article
adding banner

edits

Editing blog post

7 segment

7-segment edits

--- a/data/blog/proximity-sensor.mdx
+++ b/data/blog/proximity-sensor.mdx
@@ -5,11 +5,11 @@ tags: ['coding', 'science', 'robotics', 'circuits']
 layout: PostBanner
 images: ['/static/images/proximity-sensor.jpg']
 draft: false
-summary: We created an LED that activates based on a proximity sensor
+summary: We created an circuit that activates an LED based on proximity sensor data
 authors: ['arthur']
 ---
 
-# Proximity Sensor Based LED
+# Proximity Sensor Activated LED
 
 We started learning robotics during the summer to prepare for the robotics electives I'm taking next year. We created a circuit where an LED activates once a proximity sensor detects nearby objects within 6 inches. Here's how it works:
 
