--- a/data/blog/proximity-sensor.mdx
+++ b/data/blog/proximity-sensor.mdx
@@ -1,7 +1,7 @@
 ---
-title: Proximity Sensor and LED
+title: Proximity Sensor and LED Circuit
 date: '2025-05-31'
-tags: ['vibe-coding', 'games', 'math', 'projects']
+tags: ['coding', 'science', 'robotics', 'circuits']
 layout: PostBanner
 images: ['/static/images/proximity-sensor.jpg']
 draft: false
