--- a/data/blog/greek-quizzes.mdx
+++ b/data/blog/greek-quizzes.mdx
@@ -6,6 +6,7 @@ layout: PostBanner
 images: ['/static/images/leto.jpg']
 draft: false
 summary: Greek Mythology Quizzes
+authors: ['arthur']
 ---
 
 # Greek Mythology Quizzes
