--- a/data/blog/new-enemy-best-friend.mdx
+++ b/data/blog/new-enemy-best-friend.mdx
@@ -6,6 +6,7 @@ draft: false
 layout: PostBanner
 images: ['/static/images/new-enemy-best-friend.jpg']
 summary: New Enemy Best Friend is about a dog and a cat and adventures they have (Ages 8 - 10)
+authors: ['adele']
 ---
 
 # Facts about the author
