--- a/data/blog/proximity-sensor.mdx
+++ b/data/blog/proximity-sensor.mdx
@@ -6,6 +6,7 @@ layout: PostBanner
 images: ['/static/images/proximity-sensor.jpg']
 draft: false
 summary: We created an LED that activates based on a proximity sensor
+authors: ['arthur']
 ---
 
 # Proximity Sensor Based LED
@@ -28,7 +29,7 @@ $$
 
 ## Diagram
 
-![Proximity Sensor Diagram](/static/images/proximity-sensor-diagram.png)
+![Proximity Sensor Diagram](/static/images/proximity-sensor-diagram.jpg)
 
 ## Arduino Sketch
 
