--- a/data/blog/pythagorean-puzzle.mdx
+++ b/data/blog/pythagorean-puzzle.mdx
@@ -6,6 +6,7 @@ layout: PostBanner
 images: ['/static/images/pythagorean-puzzle1.jpg']
 draft: false
 summary: A 3D-printed puzzle that demonstrates the Pythagorean Theorem.  Buy yours today!
+authors: ['adele']
 ---
 
 # Demo Video
