--- a/data/blog/spooky-friend-rescue.mdx
+++ b/data/blog/spooky-friend-rescue.mdx
@@ -6,6 +6,7 @@ layout: PostBanner
 images: ['/static/images/spooky-friend-rescue.jpg']
 draft: false
 summary: We participated in a vibe-coding hackathon and made a web game called Spooky Friend Rescue.
+authors: ['adele']
 ---
 
 # My First Hackathon: How We Made a Spooky Game!
