--- a/data/blog/proximity-sensor.mdx
+++ b/data/blog/proximity-sensor.mdx
@@ -8,7 +8,7 @@ draft: false
 summary: We created an LED that activates based on a proximity sensor
 ---
 
-# Proximity Sensor Based LED
+# Proximity Sensor Activated LED
 
 We started learning robotics during the summer to prepare for the robotics electives I'm taking next year. We created a circuit where an LED activates once a proximity sensor detects nearby objects within 6 inches. Here's how it works:
 
